business rule injected

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Hello</h1>
 <h2>This is just an example</h2>
 <h3>Digest business rules.</h3>
-<app-ui-button [uiProps] ="uiProps" />
+<app-ui-button [uiProps] ="uiProps" [businessRuleProps]="businessRuleExample" />
